--- a/az.ipynb
+++ b/az.ipynb
@@ -78,18 +78,7 @@
    "execution_count": 3,
    "id": "49a264d4-c255-4393-b5ae-74b6f7c645da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.1' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
-      "/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.4' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
@@ -130,6 +119,7 @@
     "        # change it back to this UTM for this data\n",
     "        df = df.to_crs('EPSG:4269')\n",
     "    else:\n",
+    "        df = df.to_crs('EPSG:4269')\n",
     "        raise Exception('maup.doctor failed')\n",
     "    \n",
     "    return df"
@@ -143,13 +133,15 @@
    "outputs": [],
    "source": [
     "def add_district(dist_df, dist_name, election_df, col_name):\n",
+    "    election_df = election_df.to_crs('EPSG:4269')\n",
+    "    dist_df = dist_df.to_crs('EPSG:4269')\n",
     "    # check if it needs to be smart_repair\n",
     "    if maup.doctor(dist_df) != True:\n",
     "        dist_df = do_smart_repair(dist_df)\n",
     "\n",
     "    election_df = gpd.GeoDataFrame(election_df, crs=\"EPSG:4269\")\n",
     "\n",
-    "    # assigne the pricincts\n",
+    "    # assign the pricincts\n",
     "    precincts_to_district_assignment = maup.assign(election_df.geometry, dist_df.geometry)\n",
     "    election_df[dist_name] = precincts_to_district_assignment\n",
     "    for precinct_index in range(len(election_df)):\n",
@@ -202,7 +194,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_vest(vest, df, year, population, start_col):    \n",
+    "def add_vest(vest, df, year, population, start_col):\n",
+    "    df = df.to_crs('EPSG:4269')\n",
+    "    vest = vest.to_crs('EPSG:4269')\n",
     "     # check if it needs to be smart_repair\n",
     "    if maup.doctor(vest) != True:\n",
     "        vest = do_smart_repair(vest)\n",
@@ -231,7 +225,7 @@
     "    block_to_pricinct_assginment = maup.assign(election_in_block.geometry, df.geometry)\n",
     "    df[col_name] = election_in_block[col_name].groupby(block_to_pricinct_assginment).sum()\n",
     "    df = df.groupby(level=0, axis=1).sum()\n",
-    "    \n",
+    "    df = gpd.GeoDataFrame(df, crs = \"EPSG:4269\")\n",
     "    # check if population agrees\n",
     "    check_population(population, df)\n",
     "    \n",
@@ -336,6 +330,7 @@
    "outputs": [],
    "source": [
     "def add_vest_base(vest, start_col, year):\n",
+    "    vest = vest.to_crs('EPSG:4269')\n",
     "    original_col = vest.columns[start_col:-1]\n",
     "    new_col = [rename(i, year) for i in original_col]\n",
     "    rename_dict = dict(zip(original_col, new_col))\n",
@@ -376,15 +371,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 1489/1489 [00:07<00:00, 212.21it/s]\n"
+      "100%|█████████████████████████████████████| 1489/1489 [00:01<00:00, 1159.79it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 443 overlaps.\n",
-      "There are 26 holes.\n",
+      "There are 442 overlaps.\n",
+      "There are 4955 holes.\n",
       "Snapping all geometries to a grid with precision 10^( -5 ) to avoid GEOS errors.\n",
       "Identifying overlaps...\n"
      ]
@@ -393,7 +388,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████| 11803/11803 [00:16<00:00, 696.34it/s]\n"
+      "100%|███████████████████████████████████| 11803/11803 [00:07<00:00, 1649.37it/s]\n"
      ]
     },
     {
@@ -410,9 +405,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Gaps to simplify: 100%|█████████████████████| 5124/5124 [28:24<00:00,  3.01it/s]\n",
-      "Gaps to fill: 100%|███████████████████████████| 145/145 [00:56<00:00,  2.55it/s]\n",
-      "100%|██████████████████████████████████████| 1489/1489 [00:06<00:00, 234.11it/s]\n"
+      "Gaps to simplify: 100%|█████████████████████| 5124/5124 [12:11<00:00,  7.00it/s]\n",
+      "Gaps to fill: 100%|███████████████████████████| 145/145 [00:22<00:00,  6.31it/s]\n",
+      "100%|█████████████████████████████████████| 1489/1489 [00:01<00:00, 1209.33it/s]\n"
      ]
     }
    ],
@@ -493,8 +488,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 1489/1489 [00:07<00:00, 188.69it/s]\n",
-      "100%|███████████████████████████████████████| 1489/1489 [01:03<00:00, 23.56it/s]\n"
+      "100%|██████████████████████████████████████| 1489/1489 [00:02<00:00, 566.00it/s]\n",
+      "100%|██████████████████████████████████████| 1489/1489 [00:06<00:00, 219.08it/s]\n"
      ]
     }
    ],
@@ -614,15 +609,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 1489/1489 [00:06<00:00, 217.87it/s]\n"
+      "100%|█████████████████████████████████████| 1489/1489 [00:01<00:00, 1191.92it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 443 overlaps.\n",
-      "There are 26 holes.\n",
+      "There are 442 overlaps.\n",
+      "There are 4955 holes.\n",
       "Snapping all geometries to a grid with precision 10^( -5 ) to avoid GEOS errors.\n",
       "Identifying overlaps...\n"
      ]
@@ -631,7 +626,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████| 11803/11803 [00:19<00:00, 614.65it/s]\n"
+      "100%|███████████████████████████████████| 11803/11803 [00:06<00:00, 1801.27it/s]\n"
      ]
     },
     {
@@ -648,13 +643,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Gaps to simplify: 100%|█████████████████████| 5124/5124 [29:44<00:00,  2.87it/s]\n",
-      "Gaps to fill: 100%|███████████████████████████| 145/145 [00:50<00:00,  2.88it/s]\n",
-      "100%|██████████████████████████████████████| 1489/1489 [00:05<00:00, 275.01it/s]\n",
-      "100%|██████████████████████████████████████| 1489/1489 [00:07<00:00, 191.16it/s]\n",
-      "100%|███████████████████████████████████████| 1489/1489 [00:55<00:00, 26.96it/s]\n",
-      "100%|██████████████████████████████████████| 1489/1489 [00:07<00:00, 211.16it/s]\n",
-      "100%|███████████████████████████████████████| 1489/1489 [00:55<00:00, 26.87it/s]\n"
+      "Gaps to simplify: 100%|█████████████████████| 5124/5124 [11:30<00:00,  7.42it/s]\n",
+      "Gaps to fill: 100%|███████████████████████████| 145/145 [00:21<00:00,  6.61it/s]\n",
+      "100%|█████████████████████████████████████| 1489/1489 [00:01<00:00, 1215.14it/s]\n",
+      "100%|██████████████████████████████████████| 1489/1489 [00:02<00:00, 552.54it/s]\n",
+      "100%|██████████████████████████████████████| 1489/1489 [00:06<00:00, 219.11it/s]\n",
+      "100%|██████████████████████████████████████| 1489/1489 [00:02<00:00, 585.89it/s]\n",
+      "100%|██████████████████████████████████████| 1489/1489 [00:06<00:00, 219.53it/s]\n"
      ]
     },
     {
@@ -707,7 +702,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 1469/1469 [00:05<00:00, 262.89it/s]\n"
+      "100%|█████████████████████████████████████| 1469/1469 [00:01<00:00, 1191.03it/s]\n"
      ]
     },
     {
@@ -724,7 +719,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████| 11376/11376 [00:16<00:00, 678.39it/s]\n"
+      "100%|███████████████████████████████████| 11376/11376 [00:05<00:00, 1915.77it/s]\n"
      ]
     },
     {
@@ -741,13 +736,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Gaps to simplify: 100%|█████████████████████| 4916/4916 [26:52<00:00,  3.05it/s]\n",
-      "Gaps to fill: 100%|███████████████████████████| 109/109 [00:43<00:00,  2.48it/s]\n",
-      "100%|██████████████████████████████████████| 1469/1469 [00:05<00:00, 273.88it/s]\n",
-      "100%|██████████████████████████████████████| 1469/1469 [00:08<00:00, 182.76it/s]\n",
-      "100%|███████████████████████████████████████| 1469/1469 [00:54<00:00, 26.99it/s]\n",
-      "100%|██████████████████████████████████████| 1489/1489 [00:06<00:00, 213.08it/s]\n",
-      "100%|███████████████████████████████████████| 1489/1489 [00:54<00:00, 27.27it/s]\n"
+      "Gaps to simplify: 100%|█████████████████████| 4916/4916 [11:19<00:00,  7.23it/s]\n",
+      "Gaps to fill: 100%|███████████████████████████| 109/109 [00:19<00:00,  5.72it/s]\n",
+      "100%|█████████████████████████████████████| 1469/1469 [00:01<00:00, 1186.98it/s]\n",
+      "100%|██████████████████████████████████████| 1469/1469 [00:02<00:00, 537.26it/s]\n",
+      "100%|██████████████████████████████████████| 1469/1469 [00:06<00:00, 217.13it/s]\n",
+      "100%|██████████████████████████████████████| 1489/1489 [00:02<00:00, 594.44it/s]\n",
+      "100%|██████████████████████████████████████| 1489/1489 [00:06<00:00, 218.30it/s]\n"
      ]
     },
     {
@@ -1227,9 +1222,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████| 9/9 [00:00<00:00, 20.91it/s]\n",
-      "100%|█████████████████████████████████████████████| 9/9 [00:00<00:00, 38.58it/s]\n",
-      "100%|█████████████████████████████████████████████| 9/9 [00:07<00:00,  1.17it/s]\n"
+      "100%|█████████████████████████████████████████████| 9/9 [00:00<00:00, 99.03it/s]\n",
+      "100%|████████████████████████████████████████████| 9/9 [00:00<00:00, 195.53it/s]\n",
+      "100%|█████████████████████████████████████████████| 9/9 [00:00<00:00, 19.18it/s]\n"
      ]
     }
    ],
@@ -1249,9 +1244,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 30/30 [00:01<00:00, 23.65it/s]\n",
-      "100%|██████████████████████████████████████████| 30/30 [00:00<00:00, 149.65it/s]\n",
-      "100%|███████████████████████████████████████████| 30/30 [00:13<00:00,  2.21it/s]\n"
+      "100%|██████████████████████████████████████████| 30/30 [00:00<00:00, 143.51it/s]\n",
+      "100%|██████████████████████████████████████████| 30/30 [00:00<00:00, 471.41it/s]\n",
+      "100%|███████████████████████████████████████████| 30/30 [00:00<00:00, 35.51it/s]\n"
      ]
     }
    ],
@@ -1445,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "1b198042-dbd4-408e-bfd4-4494f2b49245",
    "metadata": {
     "tags": []
@@ -1487,7 +1482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
